Fixed image not showing

--- a/recipes/touchdown_pizza.html
+++ b/recipes/touchdown_pizza.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Touchdown Pizza</h1>
-    <img src="/images/touchdown_pizza.jpg" alt="Picture of Touchdown Pizza" width="410" height="320">
+    <img src="../images/touchdown_pizza.jpg" alt="Picture of Touchdown Pizza" width="410" height="320">
 
     <h2>Description</h2>
     <p>Simple homemade version of a pizza from my local sports pub. Best serve with ranch dressing on the side!</p>
