Added simple CSS styling to all pages.

--- a/recipes/touchdown_pizza.html
+++ b/recipes/touchdown_pizza.html
@@ -3,15 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="recipe-style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <title>Touchdown Pizza</title>
 </head>
+
+<header>
+    <nav>
+        <h1>Touchdown Pizza</h1>
+    </nav>
+</header>
+
 <body>
-    <h1>Touchdown Pizza</h1>
-    <img src="../images/touchdown_pizza.jpg" alt="Picture of Touchdown Pizza" width="410" height="320">
-
-    <h2>Description</h2>
-    <p>Simple homemade version of a pizza from my local sports pub. Best serve with ranch dressing on the side!</p>
-
+    <main>
     <h2>Ingredients</h2>
     <ul>
         <li>1 package prebaked pizza crust</li>
@@ -23,6 +29,7 @@
         <li>1 cup shredded mozzarella cheese</li>
     </ul>
 
+    <h2>Instructions</h2>
     <ol>
         <li>Preheat the oven to 475 degrees F. Line a baking sheet with aluminium foil.</li>
         <li>Place pizza crust on the prepared baking sheet.</li>
@@ -31,6 +38,12 @@
         <li>Bake in preheated oven until pizza is cooking through and cheese is bubbling, about 12 minutes. <br>Cool pizza about 5 minutes before cutting into squares.</li>
     </ol>
 
-    <a href="/index.html">Home</a>
+    <img src="../images/touchdown_pizza.jpg" alt="Picture of Touchdown Pizza" width="300" height=auto>
+</main>
+<a href="/index.html">
+    <footer>
+        __________________________________
+    </footer>
+</a>
 </body>
 </html>
