--- a/index.html
+++ b/index.html
@@ -3,11 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <title>Recipes</title>
 </head>
-<body>
-    <h1>Odin Recipes</h1>
 
-    <a href="recipes/touchdown_pizza.html">Touchdown Pizza</a>
+<header>
+    <nav>
+        <h1>Odin Recipes</h1>
+    </nav>
+</header>
+
+<body>
+    <main>
+    <h2>Recipe list:</h2>
+
+    <ol>
+        <li><a href="recipes/touchdown_pizza.html">Touchdown Pizza</a></li>
+    </ol>
+    </main>
+
+    <footer>
+        <p>This is a footer. Really.</p>
+    </footer>
 </body>
 </html>
