--- a/recipes/touchdown_pizza.html
+++ b/recipes/touchdown_pizza.html
@@ -43,7 +43,7 @@
 </main>
 <a href="/index.html">
     <footer>
-        __________________________________
+        <p>———— HOME PAGE ————</p>
     </footer>
 </a>
 </body>
